--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,7 @@ nav{
     justify-content: space-around;
     padding: 20px 0;
     background-color: #292a38;
+    align-items: center;
 }
 
 .title{
@@ -41,8 +42,11 @@ nav ul{
 }
 
 nav ul li{
-    margin: 0 .8rem;
+    margin: 0 .3rem;
     color: rgb(209, 207, 207);
+}
+.links{
+    text-decoration: none;
 }
 .top_banner{
     height: 40vh;
@@ -161,13 +165,14 @@ display: flex;
     width: 100%;
 }
     .movie_container img{
-        width: 250px;
+        width: 95%;
     }
 }
 
 @media screen and (max-width:375px){
     .container{
         grid-template-columns: repeat(1, 1fr);
+        place-content: center;
     }
     .movie_container img{
         width: 90%;
